[package]
name = "racr-parser"
version = "0.1.0"
authors = ["Kjetil Kjeka <kjetilkjeka@gmail.com>"]
edition = "2018"

[build-dependencies]
lalrpop = "0.16.2"

[dependencies]
lalrpop-util = "0.16.2"
regex = "1.1"
racr = {git = "https://github.com/racr-rust/racr-rust.git", rev = "1f8df4bb8685e874bdfbd661c18badd20804b3e7"}
