[package]
name = "racr-parser"
version = "0.1.0"
authors = ["Kjetil Kjeka <kjetilkjeka@gmail.com>"]
edition = "2018"

[build-dependencies]
lalrpop = "0.16.2"

[dependencies]
lalrpop-util = "0.16.2"
regex = "1.1"
racr = {git = "https://github.com/racr-rust/racr-rust.git", rev = "df008cef8f77d59b16085a1b8fce7fe7bae4e21b"}
